--- a/example25/index.html
+++ b/example25/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="../header.js"></script>
-		<script type="text/javascript" src="../redips-drag-min.js"></script>
+		<script type="text/javascript" src="../redips-drag-source.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<title>Example 25: Math 4 Kids</title>
 	</head>
@@ -15,10 +15,18 @@
 		<div id="main_container">
 			<!-- drag1 DIV container -->
 			<div id="drag">
-				<select id="dropDown" onchange="redips.setTable(this)">
+				<!-- first dropDown menu -->
+				<select id="dropDown1" onchange="redips.setOperation(this)">
 					<option value="addition">Addition</option>
 					<option value="multiplication">Multiplication</option>
 				</select>
+				<!-- second dropDown menu -->
+				<select id="dropDown2" onchange="redips.setMode(this)">
+					<option value="show">Show</option>
+					<option value="hide">Hide</option>
+				</select>
+				<!-- Clear all button -->
+				<input id="button1" type="button" value="Clear" onclick="redips.clearAll()"/>
 				<!-- numbers -->
 				<table id="number">
 					<colgroup>
@@ -30,18 +38,18 @@
 					</colgroup>
 					<tbody>
 						<tr class="upper">
-							<td class="mark"><div class="drag box clone">1</div></td>
-							<td class="mark"><div class="drag box clone">2</div></td>
-							<td class="mark"><div class="drag box clone">3</div></td>
-							<td class="mark"><div class="drag box clone">4</div></td>
-							<td class="mark"><div class="drag box clone">5</div></td>
+							<td class="mark"><div class="drag box clone n1">1</div></td>
+							<td class="mark"><div class="drag box clone n2">2</div></td>
+							<td class="mark"><div class="drag box clone n3">3</div></td>
+							<td class="mark"><div class="drag box clone n4">4</div></td>
+							<td class="mark"><div class="drag box clone n5">5</div></td>
 						</tr>
 						<tr class="upper">
-							<td class="mark"><div class="drag box clone">6</div></td>
-							<td class="mark"><div class="drag box clone">7</div></td>
-							<td class="mark"><div class="drag box clone">8</div></td>
-							<td class="mark"><div class="drag box clone">9</div></td>
-							<td class="mark"><div class="drag box clone">10</div></td>
+							<td class="mark"><div class="drag box clone n6">6</div></td>
+							<td class="mark"><div class="drag box clone n7">7</div></td>
+							<td class="mark"><div class="drag box clone n8">8</div></td>
+							<td class="mark"><div class="drag box clone n9">9</div></td>
+							<td class="mark"><div class="drag box clone n10">10</div></td>
 						</tr>
 					</tbody>
 				</table>
@@ -228,7 +236,7 @@
 			<div class="instructions">
 				Try to drag numbers from top table to the first column in table below.
 				After dropping DIV element to the table cell, orange box with "?" will be automatically displayed to the most right column.
-				User should click on "?" and result will be shown.
+				User should dblclick on "?" and result will be shown.
 				REDIPS.drag works in "shift" mode so dropping number on top of existing content will shift other elements.
 			</div>
 		</div>
