animation.shift property renamed to shift.animation documentation

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				rd.dropMode = 'shift';
 				// set shift mode to vertical2
 				rd.shift.mode = 'vertical2';
-				// enable animation on shifted elements
-				rd.animation.shift = true;
+				// enable shift animation
+				rd.shift.animation = true;
 				// set animation loop pause
 				rd.animation.pause = 20;
 				// display action in the message line (list of all event handlers can be found at the drag.js bottom)
