--- a/example21/index.html
+++ b/example21/index.html
@@ -227,8 +227,8 @@
 				<br/>
 				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - bunch" value="bunch"/>bunch - overflowed DIV will stay in last cell (default)<br/>
 				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - delete" value="delete"/>delete - overflow will be deleted<br/>
-				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="source"/>source - overflow will me moved to the source TD<br/>
-				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="user" checked="true"/>HTMLElement - overflow will me moved to user defined TD<br/>
+				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="source"/>source - overflow will be moved to the source TD<br/>
+				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="user" checked="true"/>HTMLElement - overflow will be moved to user defined TD<br/>
 			</div>
 		</div>
 	</body>
