--- a/example02/index.html
+++ b/example02/index.html
@@ -25,35 +25,35 @@
 				</colgroup>
 				<tr>
 					<td class="dark"></td>
-					<td class="mark blank"></td>
-					<td class="dark single" title="Single content cell"></td>
+					<td class="redips-mark blank"></td>
+					<td class="dark redips-single" title="Single content cell"></td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td class="dark single" title="Single content cell"></td>
+					<td class="dark redips-single" title="Single content cell"></td>
 				</tr>
 				<tr>
 					<td class="dark"></td>
-					<td class="mark blank"></td>
+					<td class="redips-mark blank"></td>
 					<td></td>
 					<td></td>
-					<td class="mark green_cell single"></td>
+					<td class="redips-mark green_cell redips-single"></td>
 					<td></td>
 					<td></td>
 				</tr>
 				<tr>
 					<!-- define green clone element (2 cloned elements + last element) -->
 					<td class="dark"><div id="green" class="redips-drag green redips-clone climit1_2">Green</div></td>
-					<td class="mark blank"></td>
+					<td class="redips-mark blank"></td>
 					<td></td>
-					<td class="mark orange_cell single"></td>
+					<td class="redips-mark orange_cell redips-single"></td>
 					<td></td>
-					<td class="mark orange_cell single"></td>
+					<td class="redips-mark orange_cell redips-single"></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td class="dark"></td>
-					<td class="mark blank"></td>
+					<td class="redips-mark blank"></td>
 					<td></td>
 					<td></td>
 					<td></td>
@@ -63,40 +63,40 @@
 				<tr>
 					<!-- define orange clone element (2 cloned elements + last element) -->
 					<td class="dark"><div id="orange" class="redips-drag orange redips-clone climit1_2">Orange</div></td>
-					<td class="mark blank"></td>
+					<td class="redips-mark blank"></td>
 					<td></td>
-					<td class="mark green_cell single"></td>
+					<td class="redips-mark green_cell redips-single"></td>
 					<td></td>
-					<td class="mark green_cell single"></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td class="dark"></td>
-					<td class="mark blank"></td>
-					<td></td>
-					<td></td>
-					<td class="mark orange_cell single"></td>
-					<td></td>
+					<td class="redips-mark green_cell redips-single"></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td class="dark"></td>
-					<td class="mark blank"></td>
-					<td class="dark single" title="Single content cell"></td>
+					<td class="redips-mark blank"></td>
+					<td></td>
+					<td></td>
+					<td class="redips-mark orange_cell redips-single"></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td class="dark"></td>
+					<td class="redips-mark blank"></td>
+					<td class="dark redips-single" title="Single content cell"></td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td class="dark single" title="Single content cell"></td>
+					<td class="dark redips-single" title="Single content cell"></td>
 				</tr>
 				<!-- empty row -->
 				<tr>
-					<td colspan="7" class="mark blank"></td>
+					<td colspan="7" class="redips-mark blank"></td>
 				</tr>
 				<!-- message row -->
 				<tr>
-					<td class="mark blank"></td>
-					<td class="mark blank"></td>
-					<td id="message" colspan="5" class="mark dark2">Set green and orange elements to the green and orange cells, respectively.</td>
+					<td class="redips-mark blank"></td>
+					<td class="redips-mark blank"></td>
+					<td id="message" colspan="5" class="redips-mark dark2">Set green and orange elements to the green and orange cells, respectively.</td>
 				</tr>
 			</table>
 		</div>
