--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</head>
 	<body>
 		<center>
-			<h2><a href="http://www.redips.net/javascript/drag-and-drop-table-content/" title="www.redips.net">REDIPS_drag</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation/" title="REDIPS.drag documentation">Documentation</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation-appendix-a/" title="REDIPS.drag documentation - Appendix A">Appendix A</a></h2>
+			<h2><a href="http://www.redips.net/javascript/drag-and-drop-table-content/" title="www.redips.net">REDIPS_drag</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation/" title="REDIPS.drag documentation">Documentation</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation-appendix-a/" title="REDIPS.drag documentation - Appendix A">Appendix A</a> / <a href="https://jsfiddle.net/user/dbunic/fiddles/" title="REDIPS.drag examples on jsFiddle">jsFiddle examples</a></h2>
 			<h3>Drag and drop table content/rows with JavaScript - Version 5.1.0 (<a href="changes.txt">changes</a>)</h3>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
