added loadContent() method

--- a/example01/index.html
+++ b/example01/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../header.js"></script>
-		<script type="text/javascript" src="../redips-drag-min.js"></script>
+		<script type="text/javascript" src="../redips-drag-source.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<title>Example 1: Three tables</title>
 	</head>
@@ -30,11 +30,11 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td><div id="d4" class="redips-drag t1">content</div></td>
+					<td><div id="d4" class="redips-drag t1">table</div></td>
 					<td></td>
 					<td></td>
 					<td></td>
-					<td><div id="d5" class="redips-drag t1"><select style="width: 60px"><option>table</option><option>drop</option><option>down</option><option>menu</option></select></div></td>
+					<td><div id="d5" class="redips-drag t1">content</div></td>
 				</tr>
 				<tr style="background-color: #eee">
 					<td></td>
@@ -55,7 +55,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td><div id="d8" class="redips-drag t1"><img id="smile_img" src="icon_smile.gif"/></div></td>
+					<td><div id="d8" class="redips-drag t1"><img alt="Smile" id="smile_img" src="icon_smile.gif"/></div></td>
 					<!-- <td><div id="d8" class="redips-drag t1"><img id="smile_img" src="/wp-includes/images/smilies/icon_smile.gif"/></div></td> -->
 				</tr>
 			</table>
@@ -72,7 +72,7 @@
 					<td><div id="d10" class="redips-drag t2">Drag</div></td>
 					<td style="background-color: #eee"></td>
 					<td style="background-color: #eee"><div id="d11" class="redips-drag t2">drop</div></td>
-					<td><div id="d12" class="redips-drag t2">table</div></td>
+					<td><div id="d12" class="redips-drag t2"><select style="width: 60px"><option>table</option><option>drop</option><option>down</option><option>menu</option></select></div></td>
 				</tr>
 				<tr>
 					<td colspan="2" style="background-color: #C6C8CB" title="colspan 2"></td>
