--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<body>
 		<center>
 			<h2><a href="http://www.redips.net/javascript/drag-and-drop-table-content/" title="www.redips.net">REDIPS_drag</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation/" title="REDIPS.drag documentation">Documentation</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation-appendix-a/" title="REDIPS.drag documentation - Appendix A">Appendix A</a> / <a href="https://jsfiddle.net/user/dbunic/fiddles/" title="REDIPS.drag examples on jsFiddle">jsFiddle examples</a></h2>
-			<h3>Drag and drop table content/rows with JavaScript - Version 5.2.0 (<a href="changes.txt">changes</a>)</h3>
+			<h3>Drag and drop table content/rows with JavaScript - Version 5.2.1 (<a href="changes.txt">changes</a>)</h3>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="redips-drag">
@@ -95,7 +95,7 @@
 				<tr>
 					<td><div id="link1" class="redips-drag t1">Example 08<br/><a href="example08/">Tables in separated containers</a></div></td>
 					<td><div id="link1" class="redips-drag t1">Example 18<br/><a href="example18/">Simple element animation</a> / <a href="example18/index1.html">row</a></div></td>
-					<td></td>
+					<td><div id="link1" class="redips-drag t1">Example 28<br/><a href="example28/">Load table content with AJAX</a></div></td>
 				</tr>
 				<tr>
 					<td><div id="link1" class="redips-drag t1">Example 09<br/><a href="example09/">Single and shift mode</a></div></td>
