--- a/example28/index.html
+++ b/example28/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="../header.js"></script>
-		<script type="text/javascript" src="../redips-drag-min.js"></script>
+		<script type="text/javascript" src="../redips-drag-source.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<title>Example 28: Load table content with AJAX</title>
 	</head>
