--- a/example13/index.html
+++ b/example13/index.html
@@ -42,7 +42,7 @@
 													</colgroup>
 													<tbody>
 														<tr>
-															<td><div class="redips-drag circle">A</div></td>
+															<td><div class="redips-drag circle"></div></td>
 															<td></td>
 														</tr>
 														<tr>
@@ -55,7 +55,7 @@
 																	</colgroup>
 																	<tbody>
 																		<tr>
-																			<td><div class="redips-drag circle">A</div></td>
+																			<td><div class="redips-drag circle"></div></td>
 																			<td></td>
 																		</tr>
 																		<tr>
@@ -74,7 +74,7 @@
 										</tr>
 										<tr>
 											<td></td>
-											<td><div class="redips-drag circle">A</div></td>
+											<td><div class="redips-drag circle"></div></td>
 											<td></td>
 										</tr>
 									</tbody>
@@ -85,7 +85,7 @@
 						</tr>
 						<tr>
 							<td></td>
-							<td><div class="redips-drag square">B</div></td>
+							<td><div class="redips-drag square"></div></td>
 							<td></td>
 						</tr>
 					</tbody>
@@ -104,7 +104,7 @@
 						</tr>
 						<tr>
 							<td></td>
-							<td><div class="redips-drag circle">C</div></td>
+							<td><div class="redips-drag circle"></div></td>
 							<td></td>
 						</tr>
 						<tr>
@@ -124,7 +124,7 @@
 										</tr>
 										<tr>
 											<td></td>
-											<td><div class="redips-drag square">D</div></td>
+											<td><div class="redips-drag triangle"></div></td>
 											<td></td>
 										</tr>
 										<tr>
@@ -147,7 +147,7 @@
 											<td></td>
 										</tr>
 										<tr>
-											<td><div class="redips-drag square">D</div></td>
+											<td><div class="redips-drag triangle"></div></td>
 										</tr>
 										<tr>
 											<td></td>
@@ -179,7 +179,7 @@
 						</tr>
 						<tr>
 							<td></td>
-							<td><div class="redips-drag square">D</div></td>
+							<td><div class="redips-drag triangle"></div></td>
 							<td></td>
 							<td></td>
 							<td></td>
