--- a/example00/index2.html
+++ b/example00/index2.html
@@ -9,7 +9,7 @@
 		<!-- REDIPS.drag -->
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<!-- load jQuery -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<!-- local script -->
 		<script type="text/javascript" src="script.js"></script>
 		<title>Example 0: AJAX / jQuery modification</title>
