--- a/example09/index.html
+++ b/example09/index.html
@@ -53,12 +53,13 @@
 				</div><!-- right container -->
 			</div><!-- drag container -->
 			<div id="message">
-				Sort elements from right table
+				Elements from right table can be placed in "single mode" to left table (only one DIV element in TD)
+				while dragging elements in left table works in "shift mode".
 				<br/><br/>
-				Double click will return element to initial position
+				Double click will return element to initial position.
 				<br/><br/>
 				<!-- animation checkbox -->
-				<input type="checkbox" class="checkbox" onclick="toggleAnimation(this)" title="Enable / disable animation" checked=""/><span>Shift animation</span>
+				<input type="checkbox" class="checkbox" onclick="redips.toggleAnimation(this)" title="Enable / disable animation" checked=""/><span>Shift animation</span>
 			</div>
 		</div><!-- main container -->
 	</body>
