--- a/example17/index.html
+++ b/example17/index.html
@@ -17,8 +17,8 @@
 		<center>
 			<!-- buttons -->
 			<div id="buttons">
-				<input type="button" value="Reset" class="button" onclick="javascript:reset()"/>
-				<input type="button" value="Shuffle" class="button" onclick="javascript:shuffle()"/>
+				<input type="button" value="Reset" class="button" onclick="redips.reset()"/>
+				<input type="button" value="Shuffle" class="button" onclick="redips.shuffle()"/>
 			</div>
 			<!-- first drag region -->
 			<div id="drag1">
