--- a/example21/simple/index.html
+++ b/example21/simple/index.html
@@ -63,7 +63,9 @@
 			</table>
 		</div><!-- drag container -->
 		<div class="instructions">
-			Content in upper table (table with 1 row) will be shifted to the left after dragging element from upper to the bottom table. Inside event.dropped() handler is JS code that will be executed only in case of dragging from table 0 to table 1. All other movements are ignored.
+			Content in upper table (table with 1 row) will be shifted to left after dragging element from upper to bottom table.
+			Inside event.dropped() handler is JS code that will be executed only in case of dragging from table 0 to table 1.
+			All other movements are ignored.
 		</div>
 
 	</body>
