--- a/example28/index.html
+++ b/example28/index.html
@@ -130,7 +130,8 @@
 				<br/>
 				<strong>Load3</strong>
 				<br/>
-				JSON data is read from input text field and set to the HTML table.
+				JSON data is read from text field and place to the HTML table.
+				In case of invalid JSON string, method will assume that string is URL and it will try to load URL.
 			</div>
 		</div>
 	</body>
