--- a/example21/index.html
+++ b/example21/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<!-- tables inside this DIV could contain drag-able content  -->
 		<div id="redips-drag">
-			<select id="dropDown" onchange="setTable(this)">
+			<select id="dropDown" onchange="redips.setTable(this)">
 				<option value="table1">Table1 - normal</option>
 				<option value="table2">Table2 - rowspan, colspan</option>
 				<option value="table3">Table2 - marked cells</option>
@@ -195,40 +195,40 @@
 
 			<div class="mycontrols">
 				<!-- animation checkbox -->
-				<input type="checkbox" class="checkbox" onclick="shiftAnimation(this)" title="Enable / disable animation" checked=""/>Animation
+				<input type="checkbox" class="checkbox" onclick="redips.shiftAnimation(this)" title="Enable / disable animation" checked="true"/>Animation
 				<br/>
 				<!-- confirm before delete object -->
-				<input type="checkbox" class="checkbox" onclick="toggleConfirm(this)" title="Show confirm delete dialog"/>Show confirm delete dialog
+				<input type="checkbox" class="checkbox" onclick="redips.toggleConfirm(this)" title="Show confirm delete dialog"/>Show confirm delete dialog
 				<br/>
 				<br/>
 				Shift after options:
 				<br/>
 				<!-- shift table content when DIV element is dropped to the non empty cell -->
-				<input type="radio" name="shift_after" class="checkbox" onclick="shiftAfter(this)" value="default" title="Default" checked="true"/>Default - shift content only if DIV element is dropped to the non empty cell
+				<input type="radio" name="shift_after" class="checkbox" onclick="redips.shiftAfter(this)" value="default" title="Default" checked="true"/>Default - shift content only if DIV element is dropped to the non empty cell
 				<br/>
 				<!-- shift after element is deleted checkbox -->
-				<input type="radio" name="shift_after" class="checkbox" onclick="shiftAfter(this)" value="delete" title="Enable / disable content shifting after element is deleted"/>Delete - same as "default" + shift content after element is deleted
+				<input type="radio" name="shift_after" class="checkbox" onclick="redips.shiftAfter(this)" value="delete" title="Enable / disable content shifting after element is deleted"/>Delete - same as "default" + shift content after element is deleted
 				<br/>
 				<!-- always shift table content -->
-				<input type="radio" name="shift_after" class="checkbox" onclick="shiftAfter(this)" value="always" title="Always shit table content"/>Always - always shift table content
+				<input type="radio" name="shift_after" class="checkbox" onclick="redips.shiftAfter(this)" value="always" title="Always shit table content"/>Always - always shift table content
 				<br/>
 				<br/>
 				<!-- shift modes -->
 				<span class="text">Shift options:</span>
 				<br/>
-				<input type="radio" name ="shift_mode" onclick="shiftMode(this)" title="Horizontal1" value="horizontal1" checked="true"/>horizontal 1 - element shift can affect more rows<br/>
-				<input type="radio" name ="shift_mode" onclick="shiftMode(this)" title="Horizontal2" value="horizontal2"/>horizontal 2 - each row is treated separately<br/>
-				<input type="radio" name ="shift_mode" onclick="shiftMode(this)" title="Vertical1" value="vertical1"/>vertical 1 - element shift can affect more columns<br/>
-				<input type="radio" name ="shift_mode" onclick="shiftMode(this)" title="Vertical2" value="vertical2"/>vertical 2 - each column is treated separately
+				<input type="radio" name ="shift_mode" onclick="redips.shiftMode(this)" title="Horizontal1" value="horizontal1" checked="true"/>horizontal 1 - element shift can affect more rows<br/>
+				<input type="radio" name ="shift_mode" onclick="redips.shiftMode(this)" title="Horizontal2" value="horizontal2"/>horizontal 2 - each row is treated separately<br/>
+				<input type="radio" name ="shift_mode" onclick="redips.shiftMode(this)" title="Vertical1" value="vertical1"/>vertical 1 - element shift can affect more columns<br/>
+				<input type="radio" name ="shift_mode" onclick="redips.shiftMode(this)" title="Vertical2" value="vertical2"/>vertical 2 - each column is treated separately
 				<br/>
 				<br/>
 				<!-- overflow -->
 				<span class="text">Overflow:</span>
 				<br/>
-				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - bunch" value="bunch"/>bunch - overflowed DIV will stay in last cell (default)<br/>
-				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - delete" value="delete"/>delete - overflow will be deleted<br/>
-				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="source"/>source - overflow will be moved to the source TD<br/>
-				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="user" checked="true"/>HTMLElement - overflow will be moved to user defined TD<br/>
+				<input type="radio" name ="shift_overflow" onclick="redips.overflow(this)" title="Overflow - bunch" value="bunch"/>bunch - overflowed DIV will stay in last cell (default)<br/>
+				<input type="radio" name ="shift_overflow" onclick="redips.overflow(this)" title="Overflow - delete" value="delete"/>delete - overflow will be deleted<br/>
+				<input type="radio" name ="shift_overflow" onclick="redips.overflow(this)" title="Overflow - source" value="source"/>source - overflow will be moved to the source TD<br/>
+				<input type="radio" name ="shift_overflow" onclick="redips.overflow(this)" title="Overflow - source" value="user" checked="true"/>HTMLElement - overflow will be moved to user defined TD<br/>
 			</div>
 		</div>
 	</body>
