More code cleaning and added example 29

--- a/example01/index.html
+++ b/example01/index.html
@@ -22,7 +22,7 @@
 					<td class="redips-mark">drop</td>
 					<td class="redips-mark">here</td>
 				</tr>
-				<tr style="background-color: #eee">
+				<tr class="lgrey">
 					<td><div id="d1" class="redips-drag t1">Drag</div></td>
 					<td></td>
 					<td><div id="d2" class="redips-drag t1">and</div></td>
@@ -36,7 +36,7 @@
 					<td></td>
 					<td><div id="d5" class="redips-drag t1">content</div></td>
 				</tr>
-				<tr style="background-color: #eee">
+				<tr class="lgrey">
 					<td></td>
 					<td><div id="d6" class="redips-drag t1">with</div></td>
 					<td></td>
@@ -50,7 +50,7 @@
 					<td></td>
 					<td></td>
 				</tr>
-				<tr style="background-color: #eee">
+				<tr class="lgrey">
 					<td></td>
 					<td></td>
 					<td></td>
@@ -63,15 +63,15 @@
 				<colgroup><col width="100"/><col width="100"/><col width="100"/><col width="100"/><col width="100"/></colgroup>
 				<tr>
 					<td class="redips-mark" title="You can not drop here">Table2</td>
-					<td style="background-color: #eee"><div id="d9" class="redips-drag t2">and</div></td>
+					<td class="lgrey"><div id="d9" class="redips-drag t2">and</div></td>
 					<td rowspan="3" style="background-color: #C6C8CB" title="rowspan 3"></td>
-					<td style="background-color: #eee"></td>
+					<td class="lgrey"></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td><div id="d10" class="redips-drag t2">Drag</div></td>
-					<td style="background-color: #eee"></td>
-					<td style="background-color: #eee"><div id="d11" class="redips-drag t2">drop</div></td>
+					<td class="lgrey"></td>
+					<td class="lgrey"><div id="d11" class="redips-drag t2">drop</div></td>
 					<td><div id="d12" class="redips-drag t2"><select style="width: 60px"><option>table</option><option>drop</option><option>down</option><option>menu</option></select></div></td>
 				</tr>
 				<tr>
@@ -85,20 +85,20 @@
 				</tr>
 				<tr>
 					<td><div id="d13" class="redips-drag t2"><input type="text" style="width: 60px" value="content"/></div></td>
-					<td style="background-color: #eee"></td>
-					<td style="background-color: #eee"></td>
+					<td class="lgrey"></td>
+					<td class="lgrey"></td>
 					<td></td>
 				</tr>
 				<tr>
 					<td></td>
-					<td style="background-color: #eee"><div id="d14" class="redips-drag t2">with</div></td>
-					<td style="background-color: #eee"><div id="d15" class="redips-drag t2">JavaScript</div></td>
+					<td class="lgrey"><div id="d14" class="redips-drag t2">with</div></td>
+					<td class="lgrey"><div id="d15" class="redips-drag t2">JavaScript</div></td>
 					<td class="redips-mark smile" title="Only smile can be placed here"></td>
 				</tr>
 			</table>
 			<table id="table3">
 				<colgroup><col width="100"/><col width="100"/><col width="100"/><col width="100"/><col width="100"/></colgroup>
-				<tr style="background-color: #eee">
+				<tr class="lgrey">
 					<td id="message" class="redips-mark" title="You can not drop here">Table3</td>
 					<!-- jump to smile image -->
 					<td><div id="link1" class="redips-drag t3"><a href="#smile_img" title="Jump to the smile image (links can be used as well)">Smile</a></div></td>
@@ -120,7 +120,7 @@
 					<td></td>
 					<td><div id="d19" class="redips-drag t3 redips-clone climit2_2" title="Clone two elements and die">(2) Clone</div></td>
 				</tr>
-				<tr style="background-color: #eee">
+				<tr class="lgrey">
 					<td><div id="d20" class="redips-drag t3"><input type="radio" name="radio1"/><input type="radio" name="radio1"/><input type="radio" name="radio1"/></div></td>
 					<td></td>
 					<td></td>
