--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<tr>
 					<td><div id="link1" class="redips-drag t1">Example 09<br/><a href="example09/">Single and shift mode</a></div></td>
 					<td><div id="link1" class="redips-drag t1">Example 19<br/><a href="example19/">Groups and table rows</a></div></td>
-					<td></td>
+					<td><div id="link1" class="redips-drag t1">Example 29<br/><a href="example29/">Move more DIV in column</a></div></td>
 				</tr>
 				<tr>
 					<td></td>
