--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content/rows with JavaScript"/>
 		<meta name="viewport" content="width=device-width, user-scalable=no"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="header.js"></script>
 		<script type="text/javascript" src="redips-drag-min.js"></script>
 		<!-- initialize REDIPS.drag library -->
 		<script type="text/javascript">
@@ -34,10 +35,10 @@
 		<title>www.redips.net</title>
 	</head>
 	<body>
-		<center>
+		<div id="header">
 			<h2><a href="http://www.redips.net/javascript/drag-and-drop-table-content/" title="www.redips.net">REDIPS_drag</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation/" title="REDIPS.drag documentation">Documentation</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation-appendix-a/" title="REDIPS.drag documentation - Appendix A">Appendix A</a> / <a href="https://jsfiddle.net/user/dbunic/fiddles/" title="REDIPS.drag examples on jsFiddle">jsFiddle examples</a></h2>
 			<h3>Drag and drop table content/rows with JavaScript - Version 5.3.0 (<a href="changes.txt">changes</a>)</h3>
-		</center>
+		</div>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="redips-drag">
 			<table id="table1">
@@ -84,7 +85,7 @@
 				</tr>
 				<tr>
 					<td><div id="link1" class="redips-drag t1">Example 06<br/><a href="example06/">Scrollable and fixed containers</a></div></td>
-					<td><div id="link1" class="redips-drag t1">Example 16<br/><a href="example16/">AJAX, hover, sticky, redips-dragging</a></div></td>
+					<td><div id="link1" class="redips-drag t1">Example 16<br/><a href="example16/">AJAX, hover, sticky, dragging</a></div></td>
 					<td><div id="link1" class="redips-drag t1">Example 26<br/><a href="example26/">jQuery dialog</a></div></td>
 				</tr>
 				<tr>
