--- a/example02/index.html
+++ b/example02/index.html
@@ -37,7 +37,7 @@
 					<td class="redips-mark blank"></td>
 					<td></td>
 					<td></td>
-					<td class="redips-mark green_cell redips-single"></td>
+					<td class="redips-mark green-cell redips-single"></td>
 					<td></td>
 					<td></td>
 				</tr>
@@ -46,9 +46,9 @@
 					<td class="dark"><div id="green" class="redips-drag green redips-clone climit1_2">Green</div></td>
 					<td class="redips-mark blank"></td>
 					<td></td>
-					<td class="redips-mark orange_cell redips-single"></td>
+					<td class="redips-mark orange-cell redips-single"></td>
 					<td></td>
-					<td class="redips-mark orange_cell redips-single"></td>
+					<td class="redips-mark orange-cell redips-single"></td>
 					<td></td>
 				</tr>
 				<tr>
@@ -65,9 +65,9 @@
 					<td class="dark"><div id="orange" class="redips-drag orange redips-clone climit1_2">Orange</div></td>
 					<td class="redips-mark blank"></td>
 					<td></td>
-					<td class="redips-mark green_cell redips-single"></td>
+					<td class="redips-mark green-cell redips-single"></td>
 					<td></td>
-					<td class="redips-mark green_cell redips-single"></td>
+					<td class="redips-mark green-cell redips-single"></td>
 					<td></td>
 				</tr>
 				<tr>
@@ -75,7 +75,7 @@
 					<td class="redips-mark blank"></td>
 					<td></td>
 					<td></td>
-					<td class="redips-mark orange_cell redips-single"></td>
+					<td class="redips-mark orange-cell redips-single"></td>
 					<td></td>
 					<td></td>
 				</tr>
